--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,14 @@
         } ],
     "require": {
         "php": "^8.4",
-        "decodelabs/exceptional": "^0.6"
+        "decodelabs/exceptional": "^0.6.3"
     },
     "require-dev": {
+        "decodelabs/atlas": "^0.14",
         "decodelabs/phpstan-decodelabs": "^0.7.0"
+    },
+    "conflict": {
+        "decodelabs/atlas": "<0.14"
     },
     "autoload": {
         "psr-4": {
